--- a/BulkImageConverterWinForms/BulkImageConverterWinForms.csproj
+++ b/BulkImageConverterWinForms/BulkImageConverterWinForms.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <AnalysisLevel>latest-all</AnalysisLevel>
+	  <AnalysisMode>all</AnalysisMode>
   </PropertyGroup>
 
 </Project>
